--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,4 +1,5 @@
 // Fonts
+@import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600&display=swap');
 $fonts: (
   fraunces: ("Fraunces", serif),
   karla: ("Karla", sans-serif),
