main.scss: changed

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -22,7 +22,7 @@ $color-accent:   #d8195e !default;
 // Alternative accent colors
 $accent-colors: (
   blue:   #0c8aea,
-  green:  linear-gradient(90deg, rgba(98,0,255,1) 0%, rgba(231,0,255,1) 100%),
+  green:  #5800cc,
   red:    #fa292a,
   violet: #7c43a8,
   yellow: #ed9700
