--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,5 +1,5 @@
 // Fonts
-@import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&display=swap');
 $fonts: (
   fraunces: ("Space Grotesk", serif),
   karla: ("Karla", sans-serif),
