--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -16,7 +16,7 @@ $color-gray-400: #6b7280 !default;
 $color-gray-500: #4b5563 !default;
 $color-gray-600: #2f3845 !default;
 $color-gray-700: #1f2937 !default;
-$color-gray-800: #2a1818 !default;
+$color-gray-800: #222222 !default;
 $color-gray-900: #222222 !default;
 $color-accent:   #d8195e !default;
 
