--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -23,7 +23,7 @@ $color-accent:   #d8195e !default;
 // Alternative accent colors
 $accent-colors: (
   blue:   #0c8aea,
-  green:  #a3a3a3,
+  green:  #181818,
   red:    #fa292a,
   violet: #7c43a8,
   yellow: #ed9700
