--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -22,7 +22,7 @@ $color-accent:   #d8195e !default;
 
 // Alternative accent colors
 $accent-colors: (
-  blue:   #0c8aea,
+  blue:   #ffffff,
   green:  #181818,
   red:    #fa292a,
   violet: #7c43a8,
