main.scss: changed

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -23,7 +23,7 @@ $color-accent:   #d8195e !default;
 // Alternative accent colors
 $accent-colors: (
   blue:   #ffffff,
-  green:  #181818,
+  green:  #4b4242,
   red:    #fa292a,
   violet: #7c43a8,
   yellow: #ed9700
