main.scss: changed

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,6 +1,6 @@
 // Fonts
 @import url('https://fonts.googleapis.com/css2?family=Zen+Kaku+Gothic+New:wght@400;500;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Lora:wght@300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Alike:wght@300;400;500;600;700&display=swap');
 $fonts: (
   fraunces: ("Lora", serif),
   karla: ("Karla", sans-serif),
