--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Zen+Kaku+Gothic+New:wght@400;500;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Alike:wght@300;400;500;600;700&display=swap');
 $fonts: (
-  fraunces: ("Lora", serif),
+  fraunces: ("Alike", serif),
   karla: ("Karla", sans-serif),
   system-sans: (-apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif)
 );
